navigation hover fix and logo hyperlink

--- a/firstview-homepage-second copy.html
+++ b/firstview-homepage-second copy.html
@@ -14,22 +14,28 @@
 
       <div class="wrap">
                           <header class="main-header">
-                              <img src="main-logo.jpg" id="main-logo">
-                                  <nav class="dropdown">
-                                        <button class="dropbtn"><a href="#">Home</a></button>
-                                            <div class="dropdown-content">
-                                                  <a href="#">Tenant Introduction Services</a>
-                                                  <a href="#">Inventory Preparation Services</a>
-                                                  <a href="#">Letting Management Services</a>
-                                            </div>
-                                            <!-- move home to end adjust dropdown and float text the opposite way -->
+                              <a href="#"><img src="main-logo.jpg" id="main-logo"></a>
 
-                                            <a href="#">About Us</a>
-                                            <a href="#">Properties</a>
-                                            <a href="#">Tenants</a>
-                                            <a href="#">Contact Us</a>
+                              <nav class="main-nav">
 
-                                          </nav>
+                                <nav class="dropdown">
+                                  <ul>
+                                  <li><a  class="dropbtn" href="#">Home</a></li>
+                                        <div class="dropdown-content">
+                                                    <li><a href="#">Tenant Introduction Services</a></li>
+                                                    <li><a href="#">Inventory Preparation Services</a></li>
+                                                    <li><a href="#">Letting Management Services</a></li>
+                                        </div>
+                                </nav>
+
+
+
+                                            <li><a href="#">About Us</a></li>
+                                            <li><a href="#">Properties</a></li>
+                                            <li><a href="#">Tenants</a></li>
+                                            <li><a href="#">Contact Us</a></li>
+                                          </ul>
+                                </nav>
 
                                 </header>
 <main>
