Add tenancy applications to dropdown menu

--- a/firstview-homepage-second copy.html
+++ b/firstview-homepage-second copy.html
@@ -22,6 +22,7 @@
                                   <ul>
                                   <li><a  class="dropbtn" href="#">Home</a></li>
                                         <div class="dropdown-content">
+                                                    <li><a href="#">Tenancy Applications</a></li>
                                                     <li><a href="#">Tenant Introduction Services</a></li>
                                                     <li><a href="#">Inventory Preparation Services</a></li>
                                                     <li><a href="#">Letting Management Services</a></li>
@@ -69,7 +70,7 @@
                       <span><h2>Services</h2></span>
           <section class="services">
               <ul>
-                <li> Tenancy Applications</li>
+                <li>Tenancy Applications</li>
                 <li>Tenant Introduction Services</li>
                 <li>Inventory Preparation Services</li>
                 <li>Letting Management Services</li>
