clean and format code of homepage

--- a/firstview-homepage-second copy.html
+++ b/firstview-homepage-second copy.html
@@ -13,90 +13,105 @@
     <body>
 
       <div class="wrap">
-                          <header class="main-header">
-                              <a href="#"><img src="main-logo.jpg" id="main-logo"></a>
+          <header class="main-header">
+              <a href="#"><img src="main-logo.jpg" id="main-logo"></a>
+                  <nav class="main-nav">
+                    <nav class="dropdown">
+                      <ul>
+                        <li><a  class="dropbtn" href="#">Home</a></li>
+                              <div class="dropdown-content">
+                                    <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                                    <li><a href="#">Tenant Introduction Services</a></li>
+                                    <li><a href="#">Inventory Preparation Services</a></li>
+                                    <li><a href="#">Letting Management Services</a></li>
+                              </div>
+                      </ul>
+                    </nav>
+                    <nav class="dropdown">
+                      <ul>
+                        <li><a href="#">About Us</a></li>
+                              <div class="dropdown-content">
+                                    <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                                    <li><a href="#">Tenant Introduction Services</a></li>
+                                    <li><a href="#">Inventory Preparation Services</a></li>
+                                    <li><a href="#">Letting Management Services</a></li>
+                      </ul>
+                    </nav>
+                    <nav class="dropdown">
+                      <ul>
+                        <li><a href="#">Properties</a></li>
+                              <div class="dropdown-content">
+                                  <li><a href="#">Tenancy Applications</a></li>
+                                  <li><a href="#">Tenant Introduction Services</a></li>
+                                  <li><a href="#">Inventory Preparation Services</a></li>
+                                  <li><a href="#">Letting Management Services</a></li>
+                      </ul>
+                    </nav>
+                    <nav class="dropdown">
+                      <ul>
+                        <li><a href="#">Tenants</a></li>
+                              <div class="dropdown-content">
+                                    <li><a href="#">Tenancy Applications</a></li>
+                                    <li><a href="#">Tenant Introduction Services</a></li>
+                                    <li><a href="#">Inventory Preparation Services</a></li>
+                                    <li><a href="#">Letting Management Services</a></li>
+                      </ul>
+                    </nav>
+                    <nav class="dropdown">
+                      <ul>
+                        <li><a href="#">Contact Us</a></li>
+                              <div class="dropdown-content">
+                                    <li><a href="#">Tenancy Applications</a></li>
+                                    <li><a href="#">Tenant Introduction Services</a></li>
+                                    <li><a href="#">Inventory Preparation Services</a></li>
+                                    <li><a href="#">Letting Management Services</a></li>
+                      </ul>
+                    </nav>
+                    </nav>
+          </header>
 
-                              <nav class="main-nav">
-
-                                <nav class="dropdown">
-                                  <ul>
-                                  <li><a  class="dropbtn" href="#">Home</a></li>
-                                        <div class="dropdown-content">
-                                                    <li><a href="#">Tenancy Applications</a></li>
-                                                    <li><a href="#">Tenant Introduction Services</a></li>
-                                                    <li><a href="#">Inventory Preparation Services</a></li>
-                                                    <li><a href="#">Letting Management Services</a></li>
-                                        </div>
-                                </nav>
-
-
-
-                                            <li><a href="#">About Us</a></li>
-                                            <li><a href="#">Properties</a></li>
-                                            <li><a href="#">Tenants</a></li>
-                                            <li><a href="#">Contact Us</a></li>
-                                          </ul>
-                                </nav>
-
-                                </header>
-<main>
-
-
-  <div class="title-banner">
-    <!-- <img src="key-in-door-cropped.webp" alt="key in door"> -->
-    <h1>Providing residential property letting and management services in Nottinghamshire and Derbyshire</h1>
-  </div>
-
-            <!-- <div class="background-img"> -->
-              <!-- <div class="container"> -->
+         <main>
+              <div class="title-banner">
+                <h1>Providing residential property letting and management services in Nottinghamshire and Derbyshire</h1>
+              </div>
               <div class="flexy-boi">
-                            <!-- <div class="primary-col"> -->
-                                  <p>Providing residential property letting and management services to landlords and tenants in Nottinghamshire and Derbyshire's rural countryside towns and villages.</p>
-                                  <p>Supporting the varied lifestyles of investment landlords and experienced landlords alike.</p>
-                                  <p>Beautiful properties perfect for families and individuals.</p>
-
-                            <!-- </div> -->
-                            <aside>
-                            <div class="second-col">
-                              <!-- <p>Benefit from the convenience and accessibility of our services.</p> -->
-                                <!-- <p>Property viewing appointments are arranged via email or telephone, and the review and signature of tenancy agreements are completed by return of post.</p> -->
-                                <!-- <p>Our website features modern one and two bedroom apartments, for single or dual occupancy, and houses where larger occupation is preffered or required.</p> -->
-
-                            </div>
-                          </aside>
+                <p>Providing residential property letting and management services to landlords and tenants in Nottinghamshire and Derbyshire's rural countryside towns and villages.</p>
+                <p>Supporting the varied lifestyles of investment landlords and experienced landlords alike.</p>
+                <p>Beautiful properties perfect for families and individuals.</p>
+              <aside>
+                <!-- <p>Benefit from the convenience and accessibility of our services.</p>  -->
+                  <!-- <p>Property viewing appointments are arranged via email or telephone, and the review and signature of tenancy agreements are completed by return of post.</p> -->
+                  <!-- <p>Our website features modern one and two bedroom apartments, for single or dual occupancy, and houses where larger occupation is preffered or required.</p> -->
+              </aside>
                           <!-- <p>15+ years of experience</p> -->
-                          </div>
-
-                      <span><h2>Services</h2></span>
-          <section class="services">
-              <ul>
-                <li>Tenancy Applications</li>
-                <li>Tenant Introduction Services</li>
-                <li>Inventory Preparation Services</li>
-                <li>Letting Management Services</li>
-
-             </ul>
-          </section>
-
-        <section class="contact">
-          <h2><a href="#">CONTACT</h2>
-          <p>07834 342897</p>
-          <a href="mailto:firstview.let@btinternet.com?subject=Enquiries" id="email">Email Us</a>
-        </section>
-</div>
-        <!-- <div class="photo-break">
+              </div>
+              <span><h2>Services</h2></span>
+                <section class="services">
+                  <ul>
+                    <li>Tenancy Applications</li>
+                    <li>Tenant Introduction Services</li>
+                    <li>Inventory Preparation Services</li>
+                    <li>Letting Management Services</li>
+                  </ul>
+                </section>
+                <section class="contact">
+                  <h2><a href="#">CONTACT</h2>
+                  <p>07834 342897</p>
+                  <a href="mailto:firstview.let@btinternet.com?subject=Enquiries" id="email">Email Us</a>
+                </section>
+              </div>
+              <!-- <div class="photo-break">
               <img src="keys-in-hand.jpg" >
               <img src="oxford-houses-colorful.jpg" >
               <img src="rooftops.jpg" >
               <img src="frontdoors.jpg" >
-        </div> -->
+              </div> -->
+        </main>
 
-</main>
-
-             <footer class="main-footer">
-                 <span><a href="#" id="legal">Legal Notices</span>
-                 <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
-            </footer>
+        <footer class="main-footer">
+           <span><a href="#" id="legal">Legal Notices</span>
+           <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+        </footer>
 
   </body>
 </html>
