--- a/firstview-homepage-second copy.html
+++ b/firstview-homepage-second copy.html
@@ -35,6 +35,7 @@
                                     <li><a href="#">Tenant Introduction Services</a></li>
                                     <li><a href="#">Inventory Preparation Services</a></li>
                                     <li><a href="#">Letting Management Services</a></li>
+                              </div>
                       </ul>
                     </nav>
                     <nav class="dropdown">
@@ -45,6 +46,7 @@
                                   <li><a href="#">Tenant Introduction Services</a></li>
                                   <li><a href="#">Inventory Preparation Services</a></li>
                                   <li><a href="#">Letting Management Services</a></li>
+                              </div>
                       </ul>
                     </nav>
                     <nav class="dropdown">
@@ -55,6 +57,7 @@
                                     <li><a href="#">Tenant Introduction Services</a></li>
                                     <li><a href="#">Inventory Preparation Services</a></li>
                                     <li><a href="#">Letting Management Services</a></li>
+                              </div>
                       </ul>
                     </nav>
                     <nav class="dropdown">
@@ -65,6 +68,7 @@
                                     <li><a href="#">Tenant Introduction Services</a></li>
                                     <li><a href="#">Inventory Preparation Services</a></li>
                                     <li><a href="#">Letting Management Services</a></li>
+                              </div>
                       </ul>
                     </nav>
                     </nav>
