Adjust dropdown menus, add tenancy application page

--- a/firstview-lettings-home.html
+++ b/firstview-lettings-home.html
@@ -14,38 +14,21 @@
 
       <div class="wrap">
           <header class="main-header">
-              <a href="#"><img src="images/main-logo.jpg" id="main-logo"></a>
+              <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
                   <nav class="main-nav">
+
+
+                        <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
+
+
                     <nav class="dropdown">
                       <ul>
-                        <li><a  class="dropbtn" href="#">Home</a></li>
+                        <li><a href="#">Landlords</a></li>
                               <div class="dropdown-content">
-                                  <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                                  <li><a href="tenant-introduction-services.html">Tenant Introduction Services</a></li>
-                                  <li><a href="inventory-preparation-services.html">Inventory Preparation Services</a></li>
-                                  <li><a href="letting-management.html">Letting Management Services</a></li>
-                              </div>
-                      </ul>
-                    </nav>
-                    <nav class="dropdown">
-                      <ul>
-                        <li><a href="#">About Us</a></li>
-                              <div class="dropdown-content">
-                                    <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                                    <li><a href="#">Tenant Introduction Services</a></li>
-                                    <li><a href="#">Inventory Preparation Services</a></li>
-                                    <li><a href="#">Letting Management Services</a></li>
-                              </div>
-                      </ul>
-                    </nav>
-                    <nav class="dropdown">
-                      <ul>
-                        <li><a href="#">Properties</a></li>
-                              <div class="dropdown-content">
-                                  <li><a href="#">Tenancy Applications</a></li>
-                                  <li><a href="#">Tenant Introduction Services</a></li>
-                                  <li><a href="#">Inventory Preparation Services</a></li>
-                                  <li><a href="#">Letting Management Services</a></li>
+                                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                                <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                                <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                                <li><a href="letting-management.html">Letting Management Service</a></li>
                               </div>
                       </ul>
                     </nav>
@@ -53,10 +36,30 @@
                       <ul>
                         <li><a href="#">Tenants</a></li>
                               <div class="dropdown-content">
-                                    <li><a href="#">Tenancy Applications</a></li>
-                                    <li><a href="#">Tenant Introduction Services</a></li>
-                                    <li><a href="#">Inventory Preparation Services</a></li>
-                                    <li><a href="#">Letting Management Services</a></li>
+                                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                                <li><a href="tenant-enquiry.html">Tenant Enquiries</a></li>
+                              </div>
+                      </ul>
+                    </nav>
+                    <nav class="dropdown">
+                      <ul>
+                        <li><a href="#">About Us</a></li>
+                              <div class="dropdown-content">
+                                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                                <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                                <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                                <li><a href="letting-management.html">Letting Management Service</a></li>
+                              </div>
+                      </ul>
+                    </nav>
+                    <nav class="dropdown">
+                      <ul>
+                        <li><a href="#">Properties</a></li>
+                              <div class="dropdown-content">
+                                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                                <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                                <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                                <li><a href="letting-management.html">Letting Management Service</a></li>
                               </div>
                       </ul>
                     </nav>
@@ -64,10 +67,15 @@
                       <ul>
                         <li><a href="#">Contact Us</a></li>
                               <div class="dropdown-content">
-                                    <li><a href="#">Tenancy Applications</a></li>
-                                    <li><a href="#">Tenant Introduction Services</a></li>
-                                    <li><a href="#">Inventory Preparation Services</a></li>
-                                    <li><a href="#">Letting Management Services</a></li>
+                                <li><a href="tenancy_application.html">Enquiry Form</a></li>
+                                <li><a href="tenant-introduction-services.html">Telephone Contact: 07834 342897</a></li>
+                                <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                                <li><a href="letting-management.html">Company Details:
+Firstview Lettings Ltd.
+Registration No: 5098005
+
+Registered Office:
+367B Church Rd, Frampton Cotterell, Bristol, BS36 2AQ</a></li>
                               </div>
                       </ul>
                     </nav>
