--- a/inventory-preparation-services.html
+++ b/inventory-preparation-services.html
@@ -3,71 +3,78 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="firstview-lettings.css">
-    <title>Inventory Preparation Services</title>
+    <title>Inventory Preparation Service</title>
   </head>
   <body>
     <div class="wrap">
-  <header class="main-header">
-      <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
-          <nav class="main-nav">
-            <nav class="dropdown">
-              <ul>
-                <li><a  class="dropbtn" href="#">Home</a></li>
-                      <div class="dropdown-content">
+      <header class="main-header">
+          <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
+              <nav class="main-nav">
+
+
+                    <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
+
+
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">Landlords</a></li>
+                          <div class="dropdown-content">
                             <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                            <li><a href="tenant-introduction-services.html">Tenant Introduction Services</a></li>
-                            <li><a href="inventory-preparation-services.html">Inventory Preparation Services</a></li>
-                            <li><a href="letting-management.html">Letting Management Services</a></li>
-                      </div>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">About Us</a></li>
-                      <div class="dropdown-content">
+                            <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                            <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                            <li><a href="letting-management.html">Letting Management Service</a></li>
+                          </div>
+                  </ul>
+                </nav>
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">Tenants</a></li>
+                    <div class="dropdown-content">
+                      <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                      <li><a href="tenant-enquiry.html">Tenant Enquiries</a></li>
+                    </div>
+                  </ul>
+                </nav>
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">About Us</a></li>
+                          <div class="dropdown-content">
                             <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                            <li><a href="#">Tenant Introduction Services</a></li>
-                            <li><a href="#">Inventory Preparation Services</a></li>
-                            <li><a href="#">Letting Management Services</a></li>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">Properties</a></li>
-                      <div class="dropdown-content">
-                          <li><a href="#">Tenancy Applications</a></li>
-                          <li><a href="#">Tenant Introduction Services</a></li>
-                          <li><a href="#">Inventory Preparation Services</a></li>
-                          <li><a href="#">Letting Management Services</a></li>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">Tenants</a></li>
-                      <div class="dropdown-content">
-                            <li><a href="#">Tenancy Applications</a></li>
-                            <li><a href="#">Tenant Introduction Services</a></li>
-                            <li><a href="#">Inventory Preparation Services</a></li>
-                            <li><a href="#">Letting Management Services</a></li>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">Contact Us</a></li>
-                      <div class="dropdown-content">
-                            <li><a href="#">Tenancy Applications</a></li>
-                            <li><a href="#">Tenant Introduction Services</a></li>
-                            <li><a href="#">Inventory Preparation Services</a></li>
-                            <li><a href="#">Letting Management Services</a></li>
-              </ul>
-            </nav>
-            </nav>
-  </header>
+                            <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                            <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                            <li><a href="letting-management.html">Letting Management Service</a></li>
+                          </div>
+                  </ul>
+                </nav>
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">Properties</a></li>
+                          <div class="dropdown-content">
+                            <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                            <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                            <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                            <li><a href="letting-management.html">Letting Management Service</a></li>
+                          </div>
+                  </ul>
+                </nav>
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">Contact Us</a></li>
+                          <div class="dropdown-content">
+                            <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                            <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                            <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                            <li><a href="letting-management.html">Letting Management Service</a></li>
+                          </div>
+                  </ul>
+                </nav>
+                </nav>
+      </header>
 
     <main>
-    <span class="inventory-prep-title"><h2>Inventory Preparation</h2></span>
-    <div class="inventory-prep-body"
-      <p>This option is an accessory to the Tenant Introduction service, whereby Firstview Lettings Ltd will also prepare an itemised inventory schedule of the fixtures, fittings and condition of the Landlords property. Our charge for this service varies depending on the type of property.</p>
+    <span class="inventory-prep-title"><h2>Tenant Introduction &amp Inventory Preparation Service</h2></span>
+    <div class="inventory-prep-body">
+      <p>This option is an accessory to the Tenant Introduction service, whereby Firstview Lettings Ltd will also prepare an itemised inventory schedule of the fixtures, fittings and condition of the Landlords property. Our <b>charge</b> for this service varies depending on the type of property.</p>
       <p>The inventory is an important part of the tenancy agreement made between the landlord and the tenant as it provides them both with a record of the contents and condition of the landlords property at the outset of the tenancy. Each has a copy which has been signed by both parties so that the schedule is accepted as an accurate account.</p>
       <p>In case a dispute should arise with respect to any costs incurred by the landlord that are the tenants responsibility under the agreement, or a dispute regarding the condition of the landlords property and the amount of the deposit to be paid back to the tenant at the termination of the tenancy, an accurate inventory will provide a record for both parties to refer back to when trying to resolve the dispute.<p>
     </div>
@@ -77,5 +84,6 @@
      <span><a href="#" id="legal">Legal Notices</span>
      <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
   </footer>
+  <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
   </body>
 </html>
