--- a/letting-management.html
+++ b/letting-management.html
@@ -7,67 +7,74 @@
   </head>
   <body>
     <div class="wrap">
-  <header class="main-header">
-      <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
-          <nav class="main-nav">
-            <nav class="dropdown">
-              <ul>
-                <li><a  class="dropbtn" href="#">Home</a></li>
-                      <div class="dropdown-content">
+      <header class="main-header">
+          <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
+              <nav class="main-nav">
+
+
+                    <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
+
+
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">Landlords</a></li>
+                          <div class="dropdown-content">
                             <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                            <li><a href="tenant-introduction-services.html">Tenant Introduction Services</a></li>
-                            <li><a href="inventory-preparation-services.html">Inventory Preparation Services</a></li>
-                            <li><a href="letting-management.html">Letting Management Services</a></li>
-                      </div>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">About Us</a></li>
-                      <div class="dropdown-content">
+                            <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                            <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                            <li><a href="letting-management.html">Letting Management Service</a></li>
+                          </div>
+                  </ul>
+                </nav>
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">Tenants</a></li>
+                        <div class="dropdown-content">
+                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                          <li><a href="tenant-enquiry.html">Tenant Enquiries</a></li>
+                        </div>
+                  </ul>
+                </nav>
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">About Us</a></li>
+                          <div class="dropdown-content">
                             <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                            <li><a href="#">Tenant Introduction Services</a></li>
-                            <li><a href="#">Inventory Preparation Services</a></li>
-                            <li><a href="#">Letting Management Services</a></li>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">Properties</a></li>
-                      <div class="dropdown-content">
-                          <li><a href="#">Tenancy Applications</a></li>
-                          <li><a href="#">Tenant Introduction Services</a></li>
-                          <li><a href="#">Inventory Preparation Services</a></li>
-                          <li><a href="#">Letting Management Services</a></li>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">Tenants</a></li>
-                      <div class="dropdown-content">
-                            <li><a href="#">Tenancy Applications</a></li>
-                            <li><a href="#">Tenant Introduction Services</a></li>
-                            <li><a href="#">Inventory Preparation Services</a></li>
-                            <li><a href="#">Letting Management Services</a></li>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">Contact Us</a></li>
-                      <div class="dropdown-content">
-                            <li><a href="#">Tenancy Applications</a></li>
-                            <li><a href="#">Tenant Introduction Services</a></li>
-                            <li><a href="#">Inventory Preparation Services</a></li>
-                            <li><a href="#">Letting Management Services</a></li>
-              </ul>
-            </nav>
-            </nav>
-  </header>
+                            <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                            <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                            <li><a href="letting-management.html">Letting Management Service</a></li>
+                          </div>
+                  </ul>
+                </nav>
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">Properties</a></li>
+                          <div class="dropdown-content">
+                            <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                            <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                            <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                            <li><a href="letting-management.html">Letting Management Service</a></li>
+                          </div>
+                  </ul>
+                </nav>
+                <nav class="dropdown">
+                  <ul>
+                    <li><a href="#">Contact Us</a></li>
+                          <div class="dropdown-content">
+                            <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                            <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                            <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                            <li><a href="letting-management.html">Letting Management Service</a></li>
+                          </div>
+                  </ul>
+                </nav>
+                </nav>
+      </header>
     <main>
-      <span class="letting-management-title"><h2>Letting Management</h2></span>
+      <span class="letting-management-title"><h2>Letting Management Service</h2></span>
       <div class="letting-management-body">
         <p>Firstview Lettings will provide management services for the property over the duration of the let period, or by arrangement, the continuous selection and provision of suitable tenants over an agreed period.</p>
-        <p>For a monthly charge, the service provided comprises property condition inspections and verifying the receipt of rent payments.</p>
+        <p>For a monthly <b>charge</b>, the service provided comprises property condition inspections and verifying the receipt of rent payments.</p>
         <p>If the Letting Management Service is not required at the commencement of the tenancy, this service option can be provided later if the Landlords circumstances change.</p>
       </div>
     </main>
@@ -76,5 +83,6 @@
        <span><a href="#" id="legal">Legal Notices</span>
        <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
     </footer>
+    <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
   </body>
 </html>
