--- a/tenancy_application.html
+++ b/tenancy_application.html
@@ -9,55 +9,62 @@
     <header class="main-header">
         <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
             <nav class="main-nav">
+
+
+                  <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
+
+
               <nav class="dropdown">
                 <ul>
-                  <li><a  class="dropbtn" href="#">Home</a></li>
+                  <li><a href="#">Landlords</a></li>
                         <div class="dropdown-content">
-                            <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                            <li><a href="tenant-introduction-services.html">Tenant Introduction Services</a></li>
-                            <li><a href="inventory-preparation-services.html">Inventory Preparation Services</a></li>
-                            <li><a href="letting-mangaement.html">Letting Management Services</a></li>
+                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                          <li><a href="letting-management.html">Letting Management Service</a></li>
                         </div>
+                </ul>
+              </nav>
+              <nav class="dropdown">
+                <ul>
+                  <li><a href="#">Tenants</a></li>
+                  <div class="dropdown-content">
+                    <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                    <li><a href="tenant-enquiry.html">Tenant Enquiries</a></li>
+                  </div>
                 </ul>
               </nav>
               <nav class="dropdown">
                 <ul>
                   <li><a href="#">About Us</a></li>
                         <div class="dropdown-content">
-                              <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                              <li><a href="#">Tenant Introduction Services</a></li>
-                              <li><a href="#">Inventory Preparation Services</a></li>
-                              <li><a href="#">Letting Management Services</a></li>
+                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                          <li><a href="letting-management.html">Letting Management Service</a></li>
+                        </div>
                 </ul>
               </nav>
               <nav class="dropdown">
                 <ul>
                   <li><a href="#">Properties</a></li>
                         <div class="dropdown-content">
-                            <li><a href="#">Tenancy Applications</a></li>
-                            <li><a href="#">Tenant Introduction Services</a></li>
-                            <li><a href="#">Inventory Preparation Services</a></li>
-                            <li><a href="#">Letting Management Services</a></li>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">Tenants</a></li>
-                        <div class="dropdown-content">
-                              <li><a href="#">Tenancy Applications</a></li>
-                              <li><a href="#">Tenant Introduction Services</a></li>
-                              <li><a href="#">Inventory Preparation Services</a></li>
-                              <li><a href="#">Letting Management Services</a></li>
+                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                          <li><a href="letting-management.html">Letting Management Service</a></li>
+                        </div>
                 </ul>
               </nav>
               <nav class="dropdown">
                 <ul>
                   <li><a href="#">Contact Us</a></li>
                         <div class="dropdown-content">
-                              <li><a href="#">Tenancy Applications</a></li>
-                              <li><a href="#">Tenant Introduction Services</a></li>
-                              <li><a href="#">Inventory Preparation Services</a></li>
-                              <li><a href="#">Letting Management Services</a></li>
+                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                          <li><a href="letting-management.html">Letting Management Service</a></li>
+                        </div>
                 </ul>
               </nav>
               </nav>
@@ -67,9 +74,9 @@
       <span class="tenancy-title"><h2>Tenancy Applications</h2></span>
       <div class="tenancy-body">
         <p>Tenancy Applications are assessed based on satisfactory responses to enquires about the applicants credit history. In addition, employers, bank and personal references will also be required to support the tenants application. In some circumstances, a guarantor may be required in order that the tenants application is acceptable.</p>
-        <p>Credit history information is provided by specialised agencies who charge Firstview Lettings for this information.The charge for checking the applicants credit history is included in the Application Fee.</p>
+        <p>Credit history information is provided by specialised agencies who charge Firstview Lettings for this information.The charge for checking the applicants credit history is included in the <b>Application Fee</b>.</p>
         <p>Both tenant and landlord will be required to enter into an Assured Shorthold Tenancy Agreement with each other and which will be prepared by Firstview Lettings Ltd. Typically, such agreements have an initial minimum fixed term of 6 months duration. The preparation of an Inventory Schedule itemising the condition of the fixtures and fittings within the property is strongly recommended.</p>
-        <p>Initial Payment <br> The tenant cannot be given the keys to a property for which a tenancy application is successful until the initial payment due to the landlord has been received by Firstview Lettings and has been cleared through the banking system. The initial payment is an amount equal to the first months rent plus a deposit bond of six weeks rent. The bond will be held by the Landlord as security against exceptional wear and tear or dilapidations in the condition of the property over the let period for which the tenant is responsible, and/or any other costs incurred by the Landlord which are the tenants responsibility under the agreement.</p>
+        <p><b>Initial Payment</b> The tenant cannot be given the keys to a property for which a tenancy application is successful until the initial payment due to the landlord has been received by Firstview Lettings and has been cleared through the banking system. The initial payment is an amount equal to the first months rent plus a deposit bond of six weeks rent. The bond will be held by the Landlord as security against exceptional wear and tear or dilapidations in the condition of the property over the let period for which the tenant is responsible, and/or any other costs incurred by the Landlord which are the tenants responsibility under the agreement.</p>
       </div>
       </div>
     </main>
@@ -78,4 +85,5 @@
      <span><a href="#" id="legal">Legal Notices</span>
      <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
   </footer>
+  <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
 </html>
