--- a/firstview-lettings-home.html
+++ b/firstview-lettings-home.html
@@ -68,7 +68,7 @@
                         <li><a href="#">Contact Us</a></li>
                               <div class="dropdown-content">
                                 <li><a href="tenancy_application.html">Enquiry Form</a></li>
-                                <li><a href="tenant-introduction-services.html">Telephone Contact: 07834 342897</a></li>
+                                <li><a href="#">Telephone Contact: 07834 342897</a></li>
                                 <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
                                 <li><a href="letting-management.html">Company Details:
 Firstview Lettings Ltd.
