--- a/contact-us.html
+++ b/contact-us.html
@@ -10,11 +10,7 @@
     <header class="main-header">
         <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
             <nav class="main-nav">
-
-
                   <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
-
-
               <nav class="dropdown">
                 <ul>
                   <li><a href="#">Landlords</a></li>
@@ -139,6 +135,6 @@
          <span><a href="#" id="legal">Legal Notices</span>
          <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
       </footer>
-
+  <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
   </body>
 </html>
