add properties landing page, does not include individual property pages

--- a/properties.html
+++ b/properties.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="firstview-lettings.css">
     <title>Properties</title>
   </head>
+  <body>
   <header class="main-header">
       <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
           <nav class="main-nav">
@@ -42,7 +43,7 @@
             </nav>
             <nav class="dropdown">
               <ul>
-                <li><a href="#">Properties</a></li>
+                <li><a href="properties.html">Properties</a></li>
                       <div class="dropdown-content">
                         <li><a href="tenancy_application.html">Tenancy Applications</a></li>
                         <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
@@ -69,7 +70,46 @@
             </nav>
           </nav>
   </header>
-  <body>
 
+    <main>
+    <div class='wrap'>
+      <h1>Properties</h1>
+      <h2>Lakeview Apartments - Fishponds - Bristol</h2>
+      <div class="lakeview">
+        <img src="images/full-lakeview.jpg" alt="full size image of lakeview apartment">
+        <ul>
+          <li>Large lounge with seperate kitchen, includes fitted hob and built-in oven</li>
+          <li>Double bedroom</li>
+          <li>Bathroom with electric shower</li>
+          <li>One allocated parking space</li>
+        </ul>
+      </div>
+      <div class="additional normal">
+      <span><a href="">Click here for more details</a></span>
+      <span>Available: Currently Let</span>
+      </div>
+      <h2>Marine Gardens - Coleford - Forest of Dean</h2>
+      <div class="marine-gardens">
+          <img src="images/full-marine_gardens.gif">
+
+          <ul>
+            <li>Large lounge with Kitchen area.</li>
+            <li>Double bedroom.</li>
+            <li>Modern kitchen units and bathroom suite with shower.</li>
+            <li>Off road car parking.</li>
+          </ul>
+
+    </div>
+    <div class="additional normal">
+    <span><a href="">Click here for more details</a></span>
+    <span>Available: Currently Let</span>
+    </div>
+</div>
+</main>
+<footer class="main-footer">
+   <span><a href="legal.html" id="legal">Legal Notices</a></span>
+   <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+</footer>
+<span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
   </body>
 </html>
