Add web dev note to footer

--- a/privacy-statement.html
+++ b/privacy-statement.html
@@ -93,6 +93,6 @@
    <span><a href="legal.html" id="legal">Legal Notices</span>
    <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
 </footer>
-
+  <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
   </body>
 </html>
