add legal html link to "legal notices button"

--- a/tenancy_application.html
+++ b/tenancy_application.html
@@ -79,7 +79,7 @@
     </main>
   </body>
   <footer class="main-footer">
-     <span><a href="#" id="legal">Legal Notices</span>
+     <span><a href="legal.html" id="legal">Legal Notices</a></span>
      <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
   </footer>
   <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
