link "click here for more details"

--- a/properties.html
+++ b/properties.html
@@ -85,7 +85,7 @@
         </ul>
       </div>
       <div class="additional normal">
-      <span><a href="">Click here for more details</a></span>
+      <span><a href="lakeview-apartments.html">Click here for more details</a></span>
       <span>Available: Currently Let</span>
       </div>
       <h2>Marine Gardens - Coleford - Forest of Dean</h2>
