Add cstandard and subp-titles to headings and body tags

--- a/letting-management.html
+++ b/letting-management.html
@@ -71,8 +71,8 @@
                 </nav>
       </header>
     <main>
-      <span class="letting-management-title"><h2>Letting Management Service</h2></span>
-      <div class="letting-management-body">
+      <h1 class="subp-title">Letting Management Service</h1>
+      <div class="cstandard">
         <p>Firstview Lettings will provide management services for the property over the duration of the let period, or by arrangement, the continuous selection and provision of suitable tenants over an agreed period.</p>
         <p>For a monthly <b>charge</b>, the service provided comprises property condition inspections and verifying the receipt of rent payments.</p>
         <p>If the Letting Management Service is not required at the commencement of the tenancy, this service option can be provided later if the Landlords circumstances change.</p>
