--- a/properties.html
+++ b/properties.html
@@ -73,7 +73,7 @@
 
     <main>
     <div class='wrap'>
-      <h1>Properties</h1>
+      <h1 class="subp-title">Properties</h1>
       <h2>Lakeview Apartments - Fishponds - Bristol</h2>
       <div class="lakeview">
         <img src="images/full-lakeview.jpg" alt="full size image of lakeview apartment">
