--- a/tenancy_application.html
+++ b/tenancy_application.html
@@ -68,8 +68,8 @@
     </header>
     <main>
 
-      <span class="tenancy-title"><h2>Tenancy Applications</h2></span>
-      <div class="tenancy-body">
+      <h1 class="subp-title">Tenancy Applications</h1>
+      <div class="cstandard">
         <p>Tenancy Applications are assessed based on satisfactory responses to enquires about the applicants credit history. In addition, employers, bank and personal references will also be required to support the tenants application. In some circumstances, a guarantor may be required in order that the tenants application is acceptable.</p>
         <p>Credit history information is provided by specialised agencies who charge Firstview Lettings for this information.The charge for checking the applicants credit history is included in the <b>Application Fee</b>.</p>
         <p>Both tenant and landlord will be required to enter into an Assured Shorthold Tenancy Agreement with each other and which will be prepared by Firstview Lettings Ltd. Typically, such agreements have an initial minimum fixed term of 6 months duration. The preparation of an Inventory Schedule itemising the condition of the fixtures and fittings within the property is strongly recommended.</p>
