--- a/tenant-enquiries.html
+++ b/tenant-enquiries.html
@@ -63,7 +63,6 @@
                               <li><a href="letting-management.html">Company Details:
                                     Firstview Lettings Ltd.
                                     Registration No: 5098005
-
                                     Registered Office:
                                     367B Church Rd, Frampton Cotterell, Bristol, BS36 2AQ</a></li>
                             </div>
@@ -72,11 +71,13 @@
                 </nav>
         </header>
     <main>
-    <div class="normal">
-      <span>Sorry, we do not currently have any “property wanted” enquiries.</span>
-      <p>If you are looking for somewhere to rent, but can’t get what you need, where you want it, let us try and find it for you. We can get your property search underway right here from our website. We don’t need to wait for the local evening newspapers to run an expensive advert. Once we’ve added some brief details of the type of property you are looking for onto this page, those details are immediately available to our site visitors who may have just what you’ve been looking for!</p>
-      <p>Our website has hundreds of visitors each month, the majority of them are interested in letting or renting property. Please contact us if you would like to find out more about our services</p>
-    </div>
+      <h1 class="subp-title">Tenant Enquiries </h1>
+        <div class="cstandard">
+
+          <span><h2>Sorry, we do not currently have any “property wanted” enquiries.</h2></span>
+          <p>If you are looking for somewhere to rent, but can’t get what you need, where you want it, let us try and find it for you. We can get your property search underway right here from our website. We don’t need to wait for the local evening newspapers to run an expensive advert. Once we’ve added some brief details of the type of property you are looking for onto this page, those details are immediately available to our site visitors who may have just what you’ve been looking for!</p>
+          <p>Our website has hundreds of visitors each month, the majority of them are interested in letting or renting property. Please contact us if you would like to find out more about our services</p>
+        </div>
     </main>
     </div>
     <footer class="main-footer">
