--- a/tenant-introduction-services.html
+++ b/tenant-introduction-services.html
@@ -70,10 +70,11 @@
               </nav>
               </nav>
     </header>
+    <main>
 
 
-      <span class="tenant-introduction-title"><h2>Tenant Introduction Service</h2></span>
-      <div class="tenant-introduction-body">
+      <h1 class="subp-title">Tenant Introduction Service</h1>
+      <div class="cstandard">
         <p>Tenants for properties featured on the Firstview Lettings website will be identified primarily via this website. Other methods of advertising, such as newspaper adverts may be used from time to time but the intention of such advertising methods is to promote the existence of this website only, and not necessarily to advertise individual featured properties. Our <b>charge</b> therefore reflects the cost of providing this type of service.</p>
         <p>The suitability of the proposed tenant will be assessed based on acceptable credit references provided by specialised tenant referencing agencies. In addition, employers, bank and personal references will also be required to support the tenants application. In some circumstances, a guarantor may be necessary in order that the tenants application is acceptable.</p>
         <p>Both Tenant and Landlord will be required to enter into an Assured Shorthold Tenancy Agreement with each other and which will be prepared by Firstview Lettings Ltd. Typically, such agreements have an initial minimum fixed term of 6 months duration. The preparation of an Inventory schedule itemising the condition of the fixtures and fittings within the property is strongly recommended.</p>
@@ -81,7 +82,7 @@
       </div>
 
   </div>
-
+</main>
   <footer class="main-footer">
      <span><a href="#" id="legal">Legal Notices</span>
      <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
