add subp and cstandard classes

--- a/inventory-preparation-services.html
+++ b/inventory-preparation-services.html
@@ -72,12 +72,12 @@
       </header>
 
     <main>
-    <span class="inventory-prep-title"><h2>Tenant Introduction &amp Inventory Preparation Service</h2></span>
-    <div class="inventory-prep-body">
-      <p>This option is an accessory to the Tenant Introduction service, whereby Firstview Lettings Ltd will also prepare an itemised inventory schedule of the fixtures, fittings and condition of the Landlords property. Our <b>charge</b> for this service varies depending on the type of property.</p>
-      <p>The inventory is an important part of the tenancy agreement made between the landlord and the tenant as it provides them both with a record of the contents and condition of the landlords property at the outset of the tenancy. Each has a copy which has been signed by both parties so that the schedule is accepted as an accurate account.</p>
-      <p>In case a dispute should arise with respect to any costs incurred by the landlord that are the tenants responsibility under the agreement, or a dispute regarding the condition of the landlords property and the amount of the deposit to be paid back to the tenant at the termination of the tenancy, an accurate inventory will provide a record for both parties to refer back to when trying to resolve the dispute.<p>
-    </div>
+      <h1 class="subp-title">Tenant Introduction &amp Inventory Preparation Service</h1>
+      <div class="cstandard">
+        <p>This option is an accessory to the Tenant Introduction service, whereby Firstview Lettings Ltd will also prepare an itemised inventory schedule of the fixtures, fittings and condition of the Landlords property. Our <b>charge</b> for this service varies depending on the type of property.</p>
+        <p>The inventory is an important part of the tenancy agreement made between the landlord and the tenant as it provides them both with a record of the contents and condition of the landlords property at the outset of the tenancy. Each has a copy which has been signed by both parties so that the schedule is accepted as an accurate account.</p>
+        <p>In case a dispute should arise with respect to any costs incurred by the landlord that are the tenants responsibility under the agreement, or a dispute regarding the condition of the landlords property and the amount of the deposit to be paid back to the tenant at the termination of the tenancy, an accurate inventory will provide a record for both parties to refer back to when trying to resolve the dispute.<p>
+      </div>
   </main>
   </div>
   <footer class="main-footer">
