--- a/firstview-lettings-home.html
+++ b/firstview-lettings-home.html
@@ -33,7 +33,7 @@
                     </nav>
                     <nav class="dropdown">
                       <ul>
-                        <li><a href="tenants.html">Tenants</a></li>
+                        <li><a href="tenant-services.html">Tenants</a></li>
                               <div class="dropdown-content">
                                 <ul>
                                 <li><a href="tenancy_application.html">Tenancy Applications</a></li>
@@ -46,12 +46,7 @@
                       <ul>
                         <li><a href="about-us.html">About Us</a></li>
                               <div class="dropdown-content">
-                                <ul>
-                                  <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                                  <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                                  <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                                  <li><a href="letting-management.html">Letting Management Service</a></li>
-                                </ul>
+
                               </div>
                       </ul>
                     </nav>
@@ -152,7 +147,7 @@
 <div class="cstandard">
   <h3>Have a property you want to let?</h3>
   <h4>Let us help!</h4>
-  <p>Call us today to learn how we can put you in front of tenants</p>
+  <p>Call us today to learn how we can put you in front of tenants.</p>
   <a href ="properties.html"class="btn btn-danger btn-md col-3">View Services</a>
   <a href="php/index-contact.html" class="btn btn-outline-secondary btn-md col-3">Let's Chat</a>
 </div>
