final header and footer, arrange code

--- a/lakeview-apartments.html
+++ b/lakeview-apartments.html
@@ -128,8 +128,10 @@
                       junction is also the access point to the M5/M4 motorway network just 2 miles away. The Cribbs
                       Causeway shopping centre, which includes restaurants and multi theatre cinema complex is
                       within a 30 minute drive on junction 16 of the M5.</p>
+
               </div>
-              <span><a href="properties.html">View more properties</a></span>
+              <span class="property"><a href="properties.html">View more properties</a></span>
+
       </div>
     </main>
   </div>
